--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "web-vitals": "^2.1.4",
     "zego-express-engine-webrtc": "^3.7.1"
   },
