--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.12.0",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "zego-express-engine-webrtc": "^3.7.1"
   },
